--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fusion-react-esbuild",
+  "name": "fusion-build",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/Xiot/fusion-react-esbuild.git",
@@ -13,25 +13,24 @@
     "pirates": "^4.0.1"
   },
   "dependencies": {
+    "@babel/preset-flow": "^7.12.1",
+    "@babel/preset-react": "^7.12.10",
+    "@snowpack/plugin-babel": "^2.1.6",
     "@snowpack/plugin-react-refresh": "^2.3.9",
     "@snowpack/plugin-webpack": "^2.2.0",
+    "babel-plugin-transform-prune-unused-imports": "^1.0.1",
     "esbuild": "^0.8.31",
     "flow-bin": "^0.142.0",
-    "fusion-core": "^2.2.5",
-    "fusion-react": "^4.0.7",
     "http-proxy": "^1.18.1",
-    "koa": "^2.13.1",
-    "koa-router": "^10.0.0",
     "node-fetch": "^2.6.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "snowpack": "^3.0.0"
+    "snowpack": "^3.0.0",
+    "tiny-glob": "^0.2.8"
   },
   "scripts": {
-    "dev:fusion": "yarn run fusion dev --port 4002",
-    "dev:pack": "node snowpack-server.js",
-    "build:client": "yarn run snowpack build --config ./snowpack.client.config.cjs",
-    "build:server": "yarn run snowpack build --config ./snowpack.server.config.cjs"
+    "build": "node ./scripts/build.js",
+    "watch": "nodemon --watch src ./scripts/build.js"
   },
-  "type": "module"
+  "bin": {
+    "fusion-build": "./entry.bin.js"
+  }
 }
