--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "flow-bin": "^0.142.0",
     "http-proxy": "^1.18.1",
     "node-fetch": "^2.6.1",
+    "node-watch": "^0.7.1",
     "snowpack": "^3.0.0",
+    "source-map-support": "^0.5.19",
     "tiny-glob": "^0.2.8"
   },
   "scripts": {
