--- a/package.json
+++ b/package.json
@@ -13,16 +13,12 @@
     "pirates": "^4.0.1"
   },
   "dependencies": {
-    "@babel/preset-flow": "^7.12.1",
-    "@babel/preset-react": "^7.12.10",
     "@snowpack/plugin-babel": "^2.1.6",
     "@snowpack/plugin-react-refresh": "^2.3.9",
-    "@snowpack/plugin-webpack": "^2.2.0",
-    "babel-plugin-transform-prune-unused-imports": "^1.0.1",
+    "chokidar": "^3.5.1",
     "esbuild": "^0.8.31",
     "flow-bin": "^0.142.0",
     "http-proxy": "^1.18.1",
-    "node-fetch": "^2.6.1",
     "node-watch": "^0.7.1",
     "snowpack": "^3.0.0",
     "source-map-support": "^0.5.19",
