--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -6,3 +6,16 @@ packageExtensions:
   node-fetch@*:
     dependencies:
       encoding: "*"
+  fusion-plugin-i18n@*:
+    dependencies:
+      fusion-tokens: "*"
+      fusion-plugin-universal-events: "*"
+  fusion-build-sample@*:
+    dependencies:
+      fusion-tokens: "*"
+      fusion-cli: "*"
+  fusion-build@*:
+    dependencies:
+      fusion-tokens: "*"
+      fusion-cli: "*"
+
