--- a/packages/sample-project/package.json
+++ b/packages/sample-project/package.json
@@ -10,7 +10,10 @@
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "fusion-build": "workspace:packages/fusion-build",
     "fusion-core": "^2.2.5",
+    "fusion-plugin-i18n-react": "^3.1.9",
+    "fusion-plugin-universal-events": "^2.1.8",
     "fusion-react": "^4.0.7",
+    "fusion-tokens": "^2.1.6",
     "node-fetch": "^2.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
